Bug #6930
closedimplicit conversion warnings in vm.c
Description
$ make
...
compiling vm.c
In file included from vm.c:69:
vm_insnhelper.c: In function ‘vm_setup_method’:
vm_insnhelper.c:530: warning: implicit conversion shortens 64-bit value into a 32-bit value
In file included from vm_exec.c:93,
from vm.c:71:
insns.def: In function ‘vm_exec_core’:
insns.def:841: warning: implicit conversion shortens 64-bit value into a 32-bit value
insns.def:848: warning: implicit conversion shortens 64-bit value into a 32-bit value
compiling vm_dump.c
compiling vm_backtrace.c
...
Files
Updated by nobu (Nobuyoshi Nakada) about 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r36825.
Benoit, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
suppress warnings
- insns.def (checkmatch): suppress warnings. [ruby-core:47310]
[Bug #6930] - vm_core.h (VM_FRAME_TYPE_FINISH_P): ditto.
Updated by nagachika (Tomoyuki Chikanaga) about 14 years ago
- File insns.def.warning.patch insns.def.warning.patch added
- Status changed from Closed to Assigned
There's a remaining warning on my environment (Mac OS X 10.7.4 / gcc-4.2).
I'll attach a patch. Please check it out.
Updated by nobu (Nobuyoshi Nakada) about 14 years ago
- % Done changed from 100 to 50
Indeed, checkmatch_type should be moved from the `if' block.
Please commit it.
Updated by nagachika (Tomoyuki Chikanaga) about 14 years ago
- Status changed from Assigned to Closed
- % Done changed from 50 to 100
This issue was solved with changeset r36840.
Benoit, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- insns.def (checkmatch): suppress warnings. [ruby-core:47339]
[Bug #6930]