vm_insnhelper.c
@@ -1859,10 +1859,10 @@ check_match(VALUE pattern, VALUE target, enum vm_check_match_type type)
       case VM_CHECKMATCH_TYPE_CASE:
 	return rb_funcall2(pattern, idEqq, 1, &target);
       case VM_CHECKMATCH_TYPE_RESCUE: {
-	  if (!rb_obj_is_kind_of(pattern, rb_cModule)) {
-	      rb_raise(rb_eTypeError, "class or module required for rescue clause");
-	  }
-	  return RTEST(rb_funcall2(pattern, idEqq, 1, &target));
+	if (!rb_obj_is_kind_of(pattern, rb_cModule)) {
+	    rb_raise(rb_eTypeError, "class or module required for rescue clause");
+	}
+	return RTEST(rb_funcall2(pattern, idEqq, 1, &target));
       }
       default:
 	rb_bug("check_match: unreachable");
